; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/debugfs/extr_inode.c_debugfs_create_symlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/debugfs/extr_inode.c_debugfs_create_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@S_IFLNK = common dso_local global i32 0, align 4
@S_IRWXUGO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dentry* @debugfs_create_symlink(i8* %0, %struct.dentry* %1, i8* %2) #0 {
  %4 = alloca %struct.dentry*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.dentry*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.dentry*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.dentry* %1, %struct.dentry** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call i8* @kstrdup(i8* %10, i32 %11)
  store i8* %12, i8** %9, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store %struct.dentry* null, %struct.dentry** %4, align 8
  br label %31

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* @S_IFLNK, align 4
  %19 = load i32, i32* @S_IRWXUGO, align 4
  %20 = or i32 %18, %19
  %21 = load %struct.dentry*, %struct.dentry** %6, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call %struct.dentry* @debugfs_create_file(i8* %17, i32 %20, %struct.dentry* %21, i8* %22, i32* null)
  store %struct.dentry* %23, %struct.dentry** %8, align 8
  %24 = load %struct.dentry*, %struct.dentry** %8, align 8
  %25 = icmp ne %struct.dentry* %24, null
  br i1 %25, label %29, label %26

26:                                               ; preds = %16
  %27 = load i8*, i8** %9, align 8
  %28 = call i32 @kfree(i8* %27)
  br label %29

29:                                               ; preds = %26, %16
  %30 = load %struct.dentry*, %struct.dentry** %8, align 8
  store %struct.dentry* %30, %struct.dentry** %4, align 8
  br label %31

31:                                               ; preds = %29, %15
  %32 = load %struct.dentry*, %struct.dentry** %4, align 8
  ret %struct.dentry* %32
}

declare dso_local i8* @kstrdup(i8*, i32) #1

declare dso_local %struct.dentry* @debugfs_create_file(i8*, i32, %struct.dentry*, i8*, i32*) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
